# yt_summarizer

./: .gitignore  README.md  pyproject.toml  yturl_tester.py
deployment/: env
prompt/: key_extract.txt  key_extract_with_img.txt  summary.txt
test/: test_chart_extract.py  test_get_youtube_object.py  test_image_parser.py  test_key_extract_post_process.py  test_string_extract_key.py
test/data/: extract_key_tests.json  string_extract_chart_tests.json  string_extract_key_tests.json
yt_summarizer/: main.py  yt_processor.py
yt_summarizer/llm_parser/: base_parser.py  image_key_parser.py  recognizer.py  string_extractor.py
yt_summarizer/llm_parser/utils/: llm.py  prompt.py  prompt_handler.py
yt_summarizer/models/: finance_summary.py  llm_response.py  video_fragment.py  yt_info.py
yt_summarizer/models/finance_template/: economic_indicator.py  etfs.py  financial_product.py  forex.py  market_trend.py  stock.py
yt_summarizer/service/: scene_handler.py  whisperx_handler.py
yt_summarizer/utils/: file_operation.py  image_handler.py  scene_handler.py  whisperx_handler.py  youtube_helpers.py  yt_helper.py
