[tool.poetry]
name = "yt_summarizer"
version = "0.1.0"
description = "A project to summarize YouTube videos"
authors = ["Aquila-f <qwertgb1234@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "0.114.0"
uvicorn = "0.30.1"
pytube = "15.0.0"

[tool.poetry.dev-dependencies]
httpx = "0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
